# Pyintercon

./: .gitignore  README.md  client.py  clientConnectTest.py  clientExample.py  pyconnect.py  pyintercon.py  pyinterconnect.py  requirements.txt  server.py  serverExample.py  setup.cfg
src/pyintercon/: __init__.py  threads.py
tests/: clientExample.py
