[metadata]
name = pyintercon
version = 2.1.2
author = RidoineEl
author_email = ridoineelofficiel@gmail.com
description = A module to connect your server and your clients and exchange information with  them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ridoineel/Pyintercon
project_urls =
    Bug Tracker = https://github.com/Ridoineel/Pyintercon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
